# prir-fais

./: .gitignore  allgather.cpp  hello_world.cpp  paczka.tgz  scatter.cpp
zadanie1/: CMakeLists.txt  MonteCarlo.cpp  MyMPI.cpp  MyMPI.h  RandomNumberGenerator.h  Simulation.cpp  Simulation.h  SimulationS.cpp  SimulationS.h  a.out  c_parallel_run.sh  c_serial_run.sh  compile.sh  main.cpp  mpiusage.cpp  mpiusage.h  serial_260.txt
zadanie1/original/: EnergyCalculator.cpp  Helper.cpp  Helper.h  MonteCarlo.h
zadanie2/: Board.java  BoardInterface.java  Optimizer.java  OptimizerInterface.java  OptimizerV2.java  PawnInterface.java
zadanie3/src/: Client.java  ConverterInterface.java  Main.java  RemoteConverterInterface.java  ServerImplementation.java  Start.java
zadanie4/: CMakeLists.txt  EnergyCalculator.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Simulation.cpp  Simulation.h  SimulationS.h  compile.sh  compile_multithread.sh  main.cpp  run.sh  run_multithread.sh
